force-app/main/default/objects/Time_Slot__c/Time_Slot__c.object-meta.xml
<CustomObject>
    <label>Time Slot</label>
    <nameField>
        <label>Time Slot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Time Slots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>