force-app/main/default/objects/Time_Slot__c/fields/From_Time__c.field-meta.xml
<CustomField>
    <fullName>From_Time__c</fullName>
    <label>From Time</label>
    <type>DateTime</type>
</CustomField>