force-app/main/default/objects/Time_Slot__c/fields/Parking_Space__c.field-meta.xml
<CustomField>
    <fullName>Parking_Space__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parking Space</label>
    <referenceTo>Parking_Space__c</referenceTo>
    <relationshipLabel>Time Slots</relationshipLabel>
    <relationshipName>Time_Slots</relationshipName>
    <type>Lookup</type>
</CustomField>