force-app/main/default/objects/Time_Slot__c/fields/Time_Range__c.field-meta.xml
<CustomField>
    <fullName>Time_Range__c</fullName>
    <label>Time Range</label>
    <length>250</length>
    <type>Text</type>
</CustomField>