force-app/main/default/objects/Time_Slot__c/fields/Vechicle_Number__c.field-meta.xml
<CustomField>
    <fullName>Vechicle_Number__c</fullName>
    <label>Vechicle Number</label>
    <length>250</length>
    <type>Text</type>
</CustomField>